--- a/PSP_Oscar/thymeleaf/miprimerPayara/src/main/webapp/index.html
+++ b/PSP_Oscar/thymeleaf/miprimerPayara/src/main/webapp/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lotería</title>
 </head>
 <body>
-    test 1
+<h1>Juego de Lotería</h1>
+<p>Intentos restantes: <span th:text="${remainingAttempts}">5</span></p>
+<form method="post" th:action="@{/guess}">
+    <label for="number">Adivina el número (1-10):</label>
+    <input type="number" id="number" name="number" min="1" max="10" required>
+    <button type="submit">Adivinar</button>
+</form>
+<p th:text="${message}"></p>
 </body>
 </html>
